--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -36,7 +36,7 @@ if(!pageObj.basename)
   pageObj.nolog=1;
   setTimeout("monitor_log()", 5000);
   
-go(['args__D','D','args__g','g','args__A','A','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked],[handle_results]);
+go(['args__D','D','args__g','g','args__A','A','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],[handle_results]);
 ajax_wait("check_previous_analyses();");
 }
 
@@ -327,18 +327,17 @@ function reset_basename(){
 
 function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2)
 {
- console.log (dsgid1, dsgid2, basename, chr1, chr2);
  var url = '/CoGe/run_dotplot.pl?dsg1='+dsgid1+';dsg2='+dsgid2+';chr1='+chr1+';chr2='+chr2+';base='+basename;
  var loc = $('#map_loc').val();
  var width = $('#zoom_width').val();
  if (/window/.test(loc))
   {
-    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width],[open_window]);
+    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],[open_window]);
   }
  else
   {
   $('#syn_loc'+loc).html('<span class=loading>loading . . .</span>');
-    get_dotplot(['args__src','args__'+url, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width],['syn_loc'+loc]);
+    get_dotplot(['args__src','args__'+url, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],['syn_loc'+loc]);
   }
 }
 
@@ -441,11 +440,13 @@ function open_window (url, loc, width, height)
 		<td><div class=email_box style="display:none;"><input type=text id=jobtitle> <input type=button value="Use Org Names" onClick="fill_jobtitle()"></div></td>
 
  <tr>
-   <td>Master image width (0 == dynamic)
-   <td><input type=text name=master_width id=master_width size=6 value="<TMPL_VAR NAME="MWIDTH">">
+   <td>Master image width (0 == dynamic)  <input type=text name=master_width id=master_width size=6 value="<TMPL_VAR NAME="MWIDTH">">
  <TR>
    <TD>Regenerate dotplot images?
    <input type=checkbox name="regen_images" id="regen_images">
+ <TR>
+   <TD>Calculate synonymous substitution rates (Ks) for syntenic gene pairs (slow)?
+   <input type=checkbox name="gen_ks" id="gen_ks">
 </TABLE>
 </TABLE>
 </TABLE>
