--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -36,7 +36,7 @@ if(!pageObj.basename)
   pageObj.nolog=1;
   setTimeout("monitor_log()", 5000);
   
-go(['args__D','D','args__g','g','args__A','A','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],[handle_results]);
+go(['args__D','D','args__g','g','args__A','A','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type'],[handle_results]);
 ajax_wait("check_previous_analyses();");
 }
 
@@ -325,19 +325,21 @@ function reset_basename(){
   if (message) $('#log_text').html(message);
 }
 
-function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2)
+function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2, ksdb)
 {
  var url = '/CoGe/run_dotplot.pl?dsg1='+dsgid1+';dsg2='+dsgid2+';chr1='+chr1+';chr2='+chr2+';base='+basename;
  var loc = $('#map_loc').val();
  var width = $('#zoom_width').val();
+ var min = $('#zoom_min').val();
+ var max = $('#zoom_max').val();
  if (/window/.test(loc))
   {
-    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],[open_window]);
+    get_dotplot(['args__src','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max],[open_window]);
   }
  else
   {
   $('#syn_loc'+loc).html('<span class=loading>loading . . .</span>');
-    get_dotplot(['args__src','args__'+url, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__gen_ks','args__'+$('#gen_ks')[0].checked],['syn_loc'+loc]);
+    get_dotplot(['args__src','args__'+url,'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max],['syn_loc'+loc]);
   }
 }
 
@@ -445,8 +447,14 @@ function open_window (url, loc, width, height)
    <TD>Regenerate dotplot images?
    <input type=checkbox name="regen_images" id="regen_images">
  <TR>
-   <TD>Calculate synonymous substitution rates (Ks) for syntenic gene pairs (slow)?
-   <input type=checkbox name="gen_ks" id="gen_ks">
+   <TD>Calculate substitution rates for syntenic protein coding gene pairs (slow)?
+   <select name="ks_type" id = "ks_type">
+     <option value = 0 selected>--None--</option>
+     <option value = ks >Synonymous (kS)</option>
+     <option value = kn >Non-synonymous (kN)</option>
+     <option value = kn_ks >kN/kS</option>
+   </select>
+<!--   <input type=checkbox name="gen_ks" id="gen_ks">-->
 </TABLE>
 </TABLE>
 </TABLE>
