--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -204,7 +204,7 @@ To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, ple
 <TMPL_IF NAME="LOGIN">
 <DIV align=left>
 <DIV id="message"><TMPL_VAR NAME="MESSAGE"></DIV>
-<DIV class=large>Please log on: <font class="small">(You will need make sure to set <a href="http://www.mozilla.com/firefox/">Firefox</a> accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font></div>
+<DIV class=large>Please log on: <font class="small">(You will need make sure to set <a href="http://www.mozilla.com/firefox/">your browser</a> to accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font></div>
 <TABLE class="basic">
  <TR>
   <TD>User Name:
