--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -186,6 +186,28 @@ function autosearch_coge_names (seqs){
   }
 }
 
+function walk (direction) {
+ //direction 1 == left -1 == right
+
+ var num_seqs = $('#num_seqs').val();
+ for (var i =1; i <= num_seqs; i++)
+  {
+    up = $('#drup'+i).val()*1;
+    down = $('#drdown'+i).val()*1;
+    dist = up + down;
+    if (direction == 1)
+     {
+       $('#drup'+i).val(up+dist)
+       $('#drdown'+i).val(down-dist)
+     }
+    else
+     {
+       $('#drup'+i).val(up-dist)
+       $('#drdown'+i).val(down+dist)
+     }
+  }
+}
+
 
 //Following 2 js functions take care of emailing GEvo results to user
 
@@ -643,11 +665,17 @@ function hide_skip(num){
     </div>
     </table>
 
-     <Div class ="small" align = "left">
+     <Div class = "small"  align = "left">
+     <Div >
+       <span class='ui-button ui-state-default ui-corner-all ui-button-icon-left' style="font-size: 0.8em" onclick="walk(1)"><span class="ui-icon ui-icon-arrowthick-1-w"></span>Walk all sequences left</span>
+       <span class='ui-button ui-state-default ui-corner-all ui-button-icon-right' style="font-size: 0.8em" onclick="walk(-1)"><span class="ui-icon ui-icon-arrowthick-1-e"></span>Walk all sequences right</span>
+     </div>
+
+     <Div class="link" id="open_all_sequence_open_menus" onclick="open_all_sequence_option_menus(1);">Open all sequence option menus</div>
      Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" />
      &nbsp&nbsp&nbsp&nbsp
      Pad CoGe Sequences with additional sequence: <input type="textbox" name="pad_gs" id="pad_gs" value="<TMPL_VAR NAME="PAD_GS">" size =8/>
-     <Div class="link" id="open_all_sequence_open_menus" onclick="open_all_sequence_option_menus(1);">Open all sequence option menus</div>
+
      <Div class="link" style="display: none" id="close_all_sequence_open_menus" onclick="open_all_sequence_option_menus(0);">Close all sequence option menus</div>
      E-mail GEvo results?<input type=checkbox id=check_email onclick="toggle_email_field()"><div id=email_box style="display:none;">Your E-mail Address: <input type=text id=email onBlur='address_validity_check()'><font id=email_error style="display: none; color: red;">You have supplied an invalid e-mail address.</font></div> 
      </div>
