added option for showing contigs in results graphics

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1048,6 +1048,14 @@ function hide_skip(num){
   </TD>
  <TR>
   <Td>
+<font class="small">Color contigs <span style="color:#FF0000">red</span>:</font>
+  <td>
+<label class="small"><input class="backbox" type="radio" name="show_contigs" id="show_contigs" tabindex="1" value="1" <TMPL_VAR NAME="SHOW_CONTIGS_YES"> />Yes</label>
+<label class=small><input class="backbox" type="radio" name="show_contigs" id="show_contigs" tabindex="1" value="0" <TMPL_VAR NAME="SHOW_CONTIGS_NO"> />No</label>
+    </DIV>
+  </TD>
+ <TR>
+  <Td>
 <font class="small">Auto adjust overlapping features? </font>
   <td>
   <label class="small"><input class="backbox" type="radio" name="skip_feat_overlap" id="skip_feat_overlap" tabindex="1" value="0" <TMPL_VAR NAME="FEAT_OVERLAP_YES">/>Yes</label>
