added javascript link to jquery.tablesorter.pager.js:  Josh did this and I am not sure if it is used

--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -1,5 +1,5 @@
-<!-- <SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.columnfilters.js"></SCRIPT> -->
 <SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.tablesorter.2.0.3.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.tablesorter.pager.js"></SCRIPT>
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
