fixed bug in clearing dsid when name search returns nothing

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -277,7 +277,7 @@ function dataset_group_search_chain(stuff, num, featid) {
   $("#dataset"+num).html(stuff);
   dataset_group_search(['args__dsid', 'dsid'+num, 'args__dsgid', 'dsgid'+num,'args__gstid', 'gstid'+num,'args__num', 'args__'+num, 'args__featid','args__'+featid],[feat_search_chain]);
  }
- else
+ else if (!($("#pos"+num).val()))
   {
     $("#dataset"+num).html("<hidden id=dsid"+num+">");
     $("#dataset_group"+num).html("<hidden id=dsgid"+num+">");
