updated links to js

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -10,10 +10,12 @@
 <link rel="stylesheet" type="text/css" href="/CoGe/css/superfish.css" />
 
 <!-- This is the implementation of jquery into the header of all CoGe pages -->
- <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-1.3.2.js"></SCRIPT>
+ <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-1.3.2.min.js"></SCRIPT>
 
 <!-- Implementation of jQuery UI, first line javascript, second for css  -->
-<SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-ui-1.7.custom.min.js"></SCRIPT>
+
+<SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-ui-1.7.2.custom.min.js"></SCRIPT>
+
 <link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-1.7.1.custom.css" />
 
  <!--<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.bgiframe.js"></SCRIPT>-->
