fixed bug in link to seqview.pl

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -130,7 +130,7 @@ function launch_seqview(dsgid, chr, dsid)
  {
    start = $('#start').val();
    stop = $('#stop').val();
-   window.open("SeqView.pl?dsgid="+dsgid+"dsid="+dsid+"&chr="+chr+"&start="+start+"&stop="+stop);
+   window.open("SeqView.pl?dsgid="+dsgid+"&dsid="+dsid+"&chr="+chr+"&start="+start+"&stop="+stop);
  }
 
 
